<resources>
    <string name="app_name">BabyCare</string>
    <string name="default_web_client_id">671691850139-ornu8sbn880odkglkv8t198tr6rrcrmf.apps.googleusercontent.com</string>
    <string name="email">Email :</string>
    <string name="enter_email">Enter email</string>
    <string name="name">Name :</string>
    <string name="enter_name">Enter name</string>
    <string name="last_name">Last name :</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="birthday">Birthday :</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="next">Next</string>
    <string name="adress">Adress</string>
    <string name="country_of_residence">Country of residence :</string>
    <string name="country">Country</string>
    <string name="region">Region :</string>
    <string name="street">Street :</string>
    <string name="enter_your_street">Enter your street</string>
    <string name="postal_code">Postal Code :</string>
    <string name="enter_postal_code">Enter Postal code</string>
    <string name="finish">Finish</string>
    <string name="region_list">Region</string>
    <string name="skip">Skip</string>
    <string name="personal_information">Personal Information</string>
    <string name="address_information">TextView</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_apple_id">Sign in with Apple ID</string>
    <string name="sign_in_with_facebook_account">Sign in with Facebook account</string>
    <string name="password">Password :</string>
    <string name="password_confirmation">Confirm password :</string>
    <string name="todo">TODO</string>
</resources>