<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sing_up.SignUp">


    <TextView
        android:id="@+id/EmailText"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/email"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="109dp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#8D6E63"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="109dp" />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="184dp" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColorHint="#8D6E63"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="184dp" />

    <TextView
        android:id="@+id/LastNameText"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/last_name"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="264dp" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:textColorHint="#8D6E63"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="264dp" />

    <TextView
        android:id="@+id/BirthdayText"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/birthday"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="349dp" />


    <EditText
        android:id="@+id/Birthday"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:hint="@string/enter_birthday"
        android:inputType="date"
        android:textColorHint="#8D6E63"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/AdressPage"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/next"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="580dp" />

</androidx.constraintlayout.widget.ConstraintLayout>