<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personalInfoTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/personal_information" />

            <EditText
                android:id="@+id/firstNameDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@string/name"
                tools:ignore="LabelFor,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/lastNameDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/last_name"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/emailDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/email"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/birthdayDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/birthday"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/adress_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_information" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>