<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/circle_gradient"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/logo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerInParent="true"
             />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/signInEmailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/SignInPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="150dp"
                android:layout_height="43dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:background="@drawable/round_white_button"
                android:text="Reset Password" />

            <Button

                android:id="@+id/loginButton"
                android:background="@drawable/round_white_button"
                android:layout_width="130dp"
                android:layout_height="43dp"
                android:textColor="@color/black"
                android:text="Log in" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button

            android:id="@+id/Back"
            android:layout_width="130dp"
            android:layout_height="43dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_white_button"
            android:textColor="@color/black"
            android:text="Back" />

    </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>